# Gnani-Vachana

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
gnani/: __init__.py
gnani/stt/: __init__.py  client.py
gnani_stt/: __init__.py  client.py  exceptions.py
